--- a/main.html
+++ b/main.html
@@ -98,7 +98,7 @@
 <body>
     <div class="banner" onclick="showMainPage()">광진구 주변 카페 추천</div>
     <div class="menu">
-        <button onclick="showPage(1, '예쁜 카페')">예쁜 카페</button>
+        <button onclick="showPage(1, '분위기가 좋은 카페')">분위기가 좋은 카페</button>
         <button onclick="showPage(2, '디저트가 맛있는 카페')">디저트가 맛있는 카페</button>
         <button onclick="showPage(3, '공부하기 좋은 카페')">공부하기 좋은 카페</button>
         <button onclick="showPage(4, '커피가 맛있는 카페')">커피가 맛있는 카페</button>
