--- a/cafe/dessert/cafe6.html
+++ b/cafe/dessert/cafe6.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 문서의 제목 설정 -->
-    <title>카페 베티버</title>
+    <title>카페 솔티드</title>
     <!-- Google Fonts에서 Do Hyeon 폰트 불러오기 -->
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- 내부 스타일 시트 -->
@@ -24,6 +24,7 @@
             text-align: center;
             padding: 20px;
             font-size: 24px;
+            cursor: pointer;
         }
         /* 콘텐츠 영역 스타일 설정 */
         .content {
@@ -32,8 +33,9 @@
         }
         /* 콘텐츠 내 이미지 스타일 설정 */
         .content img {
-            width: 300px;
-            height: auto;
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
             border-radius: 10px;
             margin: 10px;
         }
@@ -92,7 +94,7 @@
 </head>
 <body>
     <!-- 페이지 배너 -->
-    <div class="banner">카페 베티버/div>
+    <div class="banner">카페 솔티드/div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
