--- a/cafe/mood/pencil.html
+++ b/cafe/mood/pencil.html
@@ -24,6 +24,7 @@
             text-align: center;
             padding: 20px;
             font-size: 24px;
+            cursor: pointer;
         }
         /* 콘텐츠 영역 스타일 설정 */
         .content {
@@ -32,8 +33,9 @@
         }
         /* 콘텐츠 내 이미지 스타일 설정 */
         .content img {
-            width: 300px;
-            height: auto;
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
             border-radius: 10px;
             margin: 10px;
         }
@@ -92,17 +94,17 @@
 </head>
 <body>
     <!-- 페이지 배너 -->
-    <div class="banner">카페 연필</div>
+    <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>카페 연필 소개</h2>
         <p>여기는 카페 연필에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20220824_54%2F1661326951429TuL15_JPEG%2F0CBFEC7D-E277-44A0-A219-9EFFE1BBE3DC.jpeg" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzEwMDRfMzcg%2FMDAxNjk2NDExMDc3ODA0.0Beo1vDanNWZTfxyMyAd0rq6IVNYdD6fep9hPBc8MIog.ZlgRxxy6be1jg6TcR9MfX3fOQEBccgw7GPn8gMuh6nwg.JPEG%2FIMG_3362.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzEwMjBfODkg%2FMDAxNjk3Nzg2ODU0NDMz.076vQMf-47UTA8AJUyGoR-R9TzCsEEPWdBeGnOCAqnkg.uAjijuyRMrM9JCDCYQFbWF0_tnX5UTUq7e_fxgHH2EMg.JPEG.maeng_96%2FR0003376.JPG" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAzMjFfMTgw%2FMDAxNzExMDIwNTc5Njc4.MqUYJICl46t_5MdlbjjFjXL230g46pHnGncK-vfpiwsg.XZTscF6qTFsqb3egJZonK1yI0FO2KisQuM1hLdUCAAMg.JPEG%2FR0007386.JPG" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
@@ -117,7 +119,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=1&category=분위기가 좋은 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
