--- a/cafe/study/cafe9.html
+++ b/cafe/study/cafe9.html
@@ -24,6 +24,7 @@
             text-align: center;
             padding: 20px;
             font-size: 24px;
+            cursor: pointer;
         }
         /* 콘텐츠 영역 스타일 설정 */
         .content {
@@ -32,8 +33,9 @@
         }
         /* 콘텐츠 내 이미지 스타일 설정 */
         .content img {
-            width: 300px;
-            height: auto;
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
             border-radius: 10px;
             margin: 10px;
         }
