cafe3.html 이미지 추가:

--- a/cafe/mood/cafe3.html
+++ b/cafe/mood/cafe3.html
@@ -101,10 +101,10 @@
         <h2>카페 앰케이갤러리스튜디오 소개</h2>
         <p>여기는 카페 앰케이 갤러리스튜디오에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAxMTNfMTU4%2FMDAxNzA1MTIwMTA3NDc5.2nxXFOC6MIrxzg7SARK1u9pzgz0rzK812977mFYeVB0g.bISdjsVPPD2lp90mBLcRJMs9gPpTLWgV9Alg4dxGTBsg.JPEG.syyy5385%2FIMG_5884.jpg&type=a340" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA0MTlfMTkz%2FMDAxNjgxODk2ODI1MDk2.DSMDYVeGoRROBiqgup2-ITEyXTdiM4W7lfR1tmJb7RQg.YSuHeczmY1yuRPCnhehY8bGONIZXNgd0eEYGEWrQY40g.JPEG.artspacemk%2FIMG_8800.jpg&type=sc960_832" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAxMTRfMjIx%2FMDAxNzA1MjA3NDk0NjMy.wPUIsFmRG5aLYhYi0zBg7lGxWzf0Esx1uOCUSO_pcYMg.RODKdSe9NQFeX4vQUdtRenxixQxMxxleClbBtW_dAfYg.JPEG.kcy_s2%2FIMG_4825.jpg&type=a340" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjEwMTdfMjgz%2FMDAxNjY1OTY2MzE4MzEx.jn_7JR-61t5VKoQz3mW9mAgo5al8iEzymt0jK5utNb4g.QXfJrkkz1UpG-1MgBDAN4PbNLthUOCbT1DgUX8HPZgAg.JPEG.artspacemk%2FKR050375.jpg&type=sc960_832" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
