--- a/cafe/mood/cafe4.html
+++ b/cafe/mood/cafe4.html
@@ -101,10 +101,10 @@
         <h2>카페 본지르르소개</h2>
         <p>여기는 본지르르에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231104_221%2F1699067977040j5DPS_JPEG%2F981C16A9-0692-4558-A080-8E7901CFE3F6.jpeg" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231104_58%2F16990679793056dxiF_JPEG%2F7838A5B0-257A-417C-88FF-0BDF5339AFC0.jpeg" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA0MTJfNyAg%2FMDAxNzEyOTAwMzIyODA2.5qjx-mlskXFue3G52nfm2RYa7KNIFa6Zjj8_hm4t0GQg.5Q8cc6u85hOKtMKIYyPWlTlYIqHTn4uG6IqosEH5h6Ig.JPEG%2FCB24D3E2-E889-4E42-969D-0F3665ABD80C.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA1MDZfODIg%2FMDAxNzE0OTgyNTE2ODE3.0UCI877ANbyUG-5viNH9ld4jvpfaiHrzgbPSHosQYF0g.rsXBNdizJ_7TGnyX3RF1UXFik7emJnXBluXRje7IakYg.JPEG%2FF1956019-36B8-4B93-A608-86DF4C170974.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
