배너 수정 및 main 카페 변경

--- a/cafe/coffee/cafe14.html
+++ b/cafe/coffee/cafe14.html
@@ -94,7 +94,7 @@
 </head>
 <body>
     <!-- 페이지 배너 -->
-    <div class="banner">카페 꼬메노</div>
+    <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
