--- a/cafe/mood/cafe4.html
+++ b/cafe/mood/cafe4.html
@@ -94,12 +94,12 @@
 </head>
 <body>
     <!-- 페이지 배너 -->
-    <div class="banner">카페 본지르르/div>
+    <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
-        <h2>카페 본지르르소개</h2>
-        <p>여기는 본지르르에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <h2>본지르르 성수 소개</h2>
+        <p>여기는 본지르르 성수에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231104_221%2F1699067977040j5DPS_JPEG%2F981C16A9-0692-4558-A080-8E7901CFE3F6.jpeg" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231104_58%2F16990679793056dxiF_JPEG%2F7838A5B0-257A-417C-88FF-0BDF5339AFC0.jpeg" alt="Cafe 1 Image 2">
