--- a/cafe/study/cafe9.html
+++ b/cafe/study/cafe9.html
@@ -94,7 +94,7 @@
 </head>
 <body>
     <!-- 페이지 배너 -->
-    <div class="banner">카페 애크로매틱커피</div>
+    <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
@@ -108,7 +108,7 @@
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/p/search/세종대%20주변%20공부하기%20좋은%20카페/place/1790543616?placePath=?entry=pll&from=nx&fromNxList=true&searchType=place&c=15.00,0,0,0,dh" target="_blank">네이버 지도</a>
+            <a href="https://naver.me/54xje612" target="_blank">네이버 지도</a>
             <a href="https://www.instagram.com/achromatic_coffee/" target="_blank">인스타그램</a>
         </div>
 
