--- a/cafe/dessert/cafe6.html
+++ b/cafe/dessert/cafe6.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 문서의 제목 설정 -->
-    <title>카페 솔티드</title>
+    <title>솔티드</title>
     <!-- Google Fonts에서 Do Hyeon 폰트 불러오기 -->
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- 내부 스타일 시트 -->
@@ -98,17 +98,17 @@
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
-        <h2>카페 솔티드소개</h2>
+        <h2>솔티드 소개</h2>
         <p>여기는 솔티드에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA1MDhfMTYx%2FMDAxNzE1MTM0OTQxMzAy.2zAd-qULG-ouQw_F6HJjgnYU_icCWNxwTyffHITMSl4g.B9dvvAnoNZ_2jmqodwI-kBpYGqNI5coHChBZGm-_R2gg.JPEG%2F20240507_161037.jpg.jpg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDAzMTBfMjk5%2FMDAxNzEwMDc3OTU3NTQ4.2BsOf59dJRuDcTDJnTOO0tmAzElVzjbcsrXy32peiH4g.wB0fVh92oHe_UW5VIhXCGG98PuM6tLWw7tWbEpNLbKUg.JPEG%2FA2E4C47E-18FE-4564-9C1D-67CD86115694.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAxMjlfMTQz%2FMDAxNzA2NDg5MjAxOTM0.N-8tmxIysrVXr2HS1YtUFW84hZqK0z7TWwyuL20Tb2Qg.C1U9TWNHZ_VgIGVN46pTT3YZSF39Y2VkJf_VcPkojDgg.JPEG.rnjsgodnjs95%2F20240125%25A3%25DF181207.jpg" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzA3MDJfNyAg%2FMDAxNjg4Mjg5NDU4Nzc4.OyRBJhqaVJIzdeXaZTMWG4JjP1jvo-IepRgpN7IFri8g.ROEho-xs3ggujAnhGemP_5wyfXS4LMR-89MZnAM4W80g.JPEG%2F1688289416160.jpg.jpg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/p/search/카페%20솔티드?c=15.00,0,0,0,dh" target="_blank">네이버 지도</a>
+            <a href="https://naver.me/GOuQ9PNR" target="_blank">네이버 지도</a>
             <a href="https://www.instagram.com/cafe_salted" target="_blank">인스타그램</a>
         </div>
 
@@ -119,7 +119,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='fisrtHTML.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
