--- a/cafe/dessert/cafe5.html
+++ b/cafe/dessert/cafe5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 문서의 제목 설정 -->
-    <title>카페 베티버</title>
+    <title>베티버 성수</title>
     <!-- Google Fonts에서 Do Hyeon 폰트 불러오기 -->
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- 내부 스타일 시트 -->
@@ -98,17 +98,17 @@
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
-        <h2>카페 베티버소개</h2>
-        <p>여기는 베티버에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <h2>베티버 성수 소개</h2>
+        <p>여기는 베티버 성수에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDA1MTdfMTYy%2FMDAxNzE1OTMyNDk0MzQz.qbbXTOZuhiTXsC5gqu8CLuXeEynJTLK9dZRM2ehHIr0g.yzJfFAwxttHgehwjaaYr5GhJiLdOIyba0JW-0c1jGyQg.JPEG%2FKakaoTalk_20240517_163221185_04.jpg" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20230802_6%2F1690943199432pIBVT_JPEG%2FIMG_0164.jpeg" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231213_103%2F1702458986585SRJwA_JPEG%2FIMG_0090.JPG" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231213_5%2F1702458986779N0vjk_JPEG%2FIMG_0089.JPG" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/p/search/카페%20베티버?c=15.00,0,0,0,dh" target="_blank">네이버 지도</a>
+            <a href="https://naver.me/xTeS57C8" target="_blank">네이버 지도</a>
             <a href="https://www.instagram.com/v.etiver" target="_blank">인스타그램</a>
         </div>
 
@@ -119,7 +119,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='fisrtHTML.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
