--- a/cafe/dessert/cafe8.html
+++ b/cafe/dessert/cafe8.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 문서의 제목 설정 -->
-    <title>솔티드</title>
+    <title>레스트인무드</title>
     <!-- Google Fonts에서 Do Hyeon 폰트 불러오기 -->
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- 내부 스타일 시트 -->
@@ -98,23 +98,23 @@
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
-        <h2>솔티드 소개</h2>
-        <p>여기는 솔티드에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <h2>레스트인무드 소개</h2>
+        <p>여기는 레스트인무드에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA1MDhfMTYx%2FMDAxNzE1MTM0OTQxMzAy.2zAd-qULG-ouQw_F6HJjgnYU_icCWNxwTyffHITMSl4g.B9dvvAnoNZ_2jmqodwI-kBpYGqNI5coHChBZGm-_R2gg.JPEG%2F20240507_161037.jpg.jpg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 1">
-        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDAzMTBfMjk5%2FMDAxNzEwMDc3OTU3NTQ4.2BsOf59dJRuDcTDJnTOO0tmAzElVzjbcsrXy32peiH4g.wB0fVh92oHe_UW5VIhXCGG98PuM6tLWw7tWbEpNLbKUg.JPEG%2FA2E4C47E-18FE-4564-9C1D-67CD86115694.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
-        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAxMjlfMTQz%2FMDAxNzA2NDg5MjAxOTM0.N-8tmxIysrVXr2HS1YtUFW84hZqK0z7TWwyuL20Tb2Qg.C1U9TWNHZ_VgIGVN46pTT3YZSF39Y2VkJf_VcPkojDgg.JPEG.rnjsgodnjs95%2F20240125%25A3%25DF181207.jpg" alt="Cafe 1 Image 3">
-        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzA3MDJfNyAg%2FMDAxNjg4Mjg5NDU4Nzc4.OyRBJhqaVJIzdeXaZTMWG4JjP1jvo-IepRgpN7IFri8g.ROEho-xs3ggujAnhGemP_5wyfXS4LMR-89MZnAM4W80g.JPEG%2F1688289416160.jpg.jpg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20240326_218%2F1711438659920Eylkf_JPEG%2FKakaoTalk_20240326_160212283_01.jpg" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA0MjhfOTMg%2FMDAxNzE0MjkyMTk1OTMz.cTB6-S5K11Oil2X4we01UTribXAzfhnZ4WCpxjqzY_Ag.7nQXdoGh7aXVFE3VEKG6geamTXmfmRl8HqbD29qkkNMg.JPEG%2FF5A9E9D9-557B-4C64-B1E0-25B0DACE11F8.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDA0MjJfNTYg%2FMDAxNzEzNzk1MDg2OTkw.DxXMyVO6Vh2icgGARJyLh5oy5OxqrrruVRI_SWd37bkg._Lkjot2AjLi0Zi_4z34WLeLraiaQjiAygHX9D_DKQLUg.JPEG%2Foutput_2923858013.jpg" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231201_178%2F1701425406693AdbE8_JPEG%2FKakaoTalk_20231201_145301517_02.jpg" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://naver.me/GOuQ9PNR" target="_blank">네이버 지도</a>
-            <a href="https://www.instagram.com/cafe_salted" target="_blank">인스타그램</a>
+            <a href="https://naver.me/GY2TAPGG" target="_blank">네이버 지도</a>
+            <a href="https://www.instagram.com/rest_in_mood/" target="_blank">인스타그램</a>
         </div>
 
         <!-- 지도 삽입 -->
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.990730692616!2d127.07648727667912!3d37.555282172041494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5d9b729f6ed%3A0x7d6a668216c5b967!2z7IaU7Yuw65Oc!5e0!3m2!1sko!2skr!4v1716972583855!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.297756457504!2d127.08717537455986!3d37.54804802519017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca54f05dacd4d%3A0x356ed0ab910bbcb2!2z7Lm07Y6YIOugiOyKpO2KuOyduOustOuTnA!5e0!3m2!1sko!2skr!4v1717030688117!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         
         <!-- 목록으로 돌아가기 버튼 -->
