--- a/cafe/study/cafe9.html
+++ b/cafe/study/cafe9.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 문서의 제목 설정 -->
-    <title>카페 애크로매틱커피</title>
+    <title>애크로매틱커피</title>
     <!-- Google Fonts에서 Do Hyeon 폰트 불러오기 -->
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- 내부 스타일 시트 -->
@@ -98,13 +98,13 @@
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
-        <h2>카페 애크로매틱커피 소개</h2>
-        <p>여기는 카페 애크로매틱커피에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <h2>애크로매틱커피 소개</h2>
+        <p>여기는 애크로매틱커피에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231209_220%2F1702110245959u7He7_JPEG%2F%25C5%25A9%25B1%25E2%25BA%25AF%25C8%25AFKakaoTalk_20231208_091728267_02.jpg" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231209_140%2F1702110245870blcUI_JPEG%2F%25C5%25A9%25B1%25E2%25BA%25AF%25C8%25AFKakaoTalk_20231208_091728267_11.jpg" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDAzMjVfMTUw%2FMDAxNzExMzQ5NzAyOTA0.zXmO5bZW9Bq-5kLbPCyNox-NNpj0JZa2H8mMVo5PYdIg.tERPVZAMjT13QeonICrxKlLmPXpfzOrzQrzIPtJtWAMg.JPEG%2F3EF570BE-DBB5-460F-85FA-9967B5A31DC1.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA0MTdfMjMy%2FMDAxNzEzMzI3NTc0NjYx.hQBs9VMaVe5P0v2CwxNBe5F26TykiHJiZovudDJhCoEg.6PD7M1LikLSYRbmoRdJ_vQoeMBb8eRtKlEZZ-6-tGScg.JPEG%2F2737E905-3908-43D4-8FFC-B5336E1FFFAC.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
@@ -119,7 +119,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='fisrtHTML.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
