--- a/cafe/study/cafe10.html
+++ b/cafe/study/cafe10.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 문서의 제목 설정 -->
-    <title>푸쉬커피</title>
+    <title>체리커피</title>
     <!-- Google Fonts에서 Do Hyeon 폰트 불러오기 -->
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- 내부 스타일 시트 -->
@@ -98,23 +98,23 @@
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
-        <h2>푸쉬커피 소개</h2>
-        <p>여기는 푸쉬커피에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <h2>체리커피 소개</h2>
+        <p>여기는 체리커피에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20220824_54%2F1661326951429TuL15_JPEG%2F0CBFEC7D-E277-44A0-A219-9EFFE1BBE3DC.jpeg" alt="Cafe 1 Image 1">
-        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzEwMDRfMzcg%2FMDAxNjk2NDExMDc3ODA0.0Beo1vDanNWZTfxyMyAd0rq6IVNYdD6fep9hPBc8MIog.ZlgRxxy6be1jg6TcR9MfX3fOQEBccgw7GPn8gMuh6nwg.JPEG%2FIMG_3362.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
-        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzEwMjBfODkg%2FMDAxNjk3Nzg2ODU0NDMz.076vQMf-47UTA8AJUyGoR-R9TzCsEEPWdBeGnOCAqnkg.uAjijuyRMrM9JCDCYQFbWF0_tnX5UTUq7e_fxgHH2EMg.JPEG.maeng_96%2FR0003376.JPG" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20221218_111%2F1671346585833osUBG_JPEG%2FIMG_6606.jpeg" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20221218_292%2F1671346589537K2m98_JPEG%2FIMG_6615.jpeg" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20221218_129%2F1671346578190IUgUm_JPEG%2FIMG_6581.jpeg" alt="Cafe 1 Image 3">
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAzMjFfMTgw%2FMDAxNzExMDIwNTc5Njc4.MqUYJICl46t_5MdlbjjFjXL230g46pHnGncK-vfpiwsg.XZTscF6qTFsqb3egJZonK1yI0FO2KisQuM1hLdUCAAMg.JPEG%2FR0007386.JPG" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/v5/entry/place/주소" target="_blank">네이버 지도</a>
-            <a href="https://www.instagram.com/카페인스타그램주소" target="_blank">인스타그램</a>
+            <a href="https://naver.me/5Tv3Otz1" target="_blank">네이버 지도</a>
+            <a href="https://www.instagram.com/cherrycoffee_seoul/" target="_blank">인스타그램</a>
         </div>
 
         <!-- 지도 삽입 -->
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.994612137412!2d127.07300477456033!3d37.55519072478067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5fa4a014613%3A0x5326553b974e1198!2z7Jew7ZWE!5e0!3m2!1sko!2skr!4v1716961378467!5m2!1sko!2skr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.995058857274!2d127.07870350000002!3d37.555180200000024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356317b430fc77e7%3A0x18d8073dce14988d!2z7LK066as7Luk7ZS8!5e0!3m2!1sko!2skr!4v1717034661960!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         
         <!-- 목록으로 돌아가기 버튼 -->
