--- a/cafe/study/cafe11.html
+++ b/cafe/study/cafe11.html
@@ -101,10 +101,10 @@
         <h2>카페 보난자커피 소개</h2>
         <p>여기는 카페 보난자커피에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20220518_58%2F1652861247773Dike6_JPEG%2F_MG_4177.JPG" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjExMjhfMjk4%2FMDAxNjY5NTY1OTEwMzA1.8B25Lq760R6uMPiVfYPeYei6FyNtC6pGB5rs-Jaunz0g.x6JBOAKaZ9TxIfQ2iXE1H2_10gO1vPBG7dEvFGZIEugg.JPEG.kbm2870%2F1669565349458.jpg&type=sc960_832" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzAyMjNfMTE3%2FMDAxNDg3ODUxMDA5NzIz.Qf0Bs7-57K8dRu5LERsVCviDk0QJ7TXStn7UgOtBhswg.MOwewt9-HuBov8ei5hpIt9dTw-cz4Xod0L-owCHjLj8g.JPEG.bn2042%2FIMG_20161223_113513.jpg&type=sc960_832" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjEyMDdfNDQg%2FMDAxNjcwNDA0MTY1MjQ1.BchQdYZGcie86gQ2SJ67PtBnF5zjOTE3dhYEzdrZCGog.LrLar7ClLZ1mAiD6zgWKGRJoYW7Mba6y0gPU7oxwB6Eg.JPEG.hyena908%2FKakaoTalk_20221207_172037293_24.jpg&type=sc960_832" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
