cafe12 카페온더플랜 이미지 추가

--- a/cafe/study/cafe12.html
+++ b/cafe/study/cafe12.html
@@ -102,10 +102,10 @@
         <h2>카페 온더플랜 소개</h2>
         <p>여기는 카페 온더플랜에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxODAzMDJfMjkx%2FMDAxNTE5OTc0NjU0NDUy.I7SByBMNAj4qAzQY3Ejz4JnTZYlbwWEzG5nIwxrpy4gg.ANZ8aDYar-8On9-epSNLWZjekMZouzV233emiNunng0g.JPEG.possess3117%2F20180302_124538.jpg&type=sc960_832" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMDAzMTRfNzcg%2FMDAxNTg0MTkzMTI0NjY3.-sCQd0JgAd7l9B9RfJ2wdJwg7BhnxYCkTuR6yn5MSLQg.z_Rz5-URq2t66TT7EOIr-BNLESOIgMW1NKgbzaGBKWAg.JPEG.kts319%2FKakaoTalk_20200314_215157903_01.jpg&type=sc960_832" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA0MjJfOTkg%2FMDAxNjgyMTcwMzUyNTY3.d6JRVR3--aKkrQ0HwojG6d2MrwA9MIHRTdANxOfz2Z4g.s1LYg2qsBw57xBziXGWhOyr11iSxs-L0Uh91zOOOgbog.JPEG.akyeong726%2FIMG_4405.jpg&type=sc960_832" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAyMDNfNTQg%2FMDAxNzA2OTcyMjcwMzMx.cGhWRGrMs_mW0Q9tfxlXvp5rb-MOPdNsvI7giyti-7Ag.xypPmToDWN9vC_VK8fu5Wiz7ythLwcxZpBWwAbkpQ9Mg.JPEG.junkhee30%2FIMG_1603.JPG&type=sc960_832" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
@@ -120,7 +120,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='fisrtHTML.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
